# v2ray-fireopen

./: Cargo.toml
src/: error.rs  main.rs
src/ipset/: mod.rs  types.rs
utils/: v2ray_bootstrap.sh
