[package]
name = "v2ray-fireopen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", features = ["compat"] }
hyper = "0.13"
hyper-tls = "0.4.1"
tokio = { version = "0.2", features = ["full"] }
route-recognizer = "0.1.13"
lazy_static = "1"
failure = "0.1.8"
libc = "0.2.66"
crslmnl = "0.2.1"
log = "0.4.6"
env_logger = "0.6.0"
